Menu de configuracion mejorado

--- a/memoria/config.cfg
+++ b/memoria/config.cfg
@@ -1,6 +1,6 @@
 PUERTO=8085
-MARCOS=
-MARCO_SIZE= 
-ENTRADAS_CACHE=
-CACHE_X_PROC=
-RETARDO_MEMORIA=
+MARCOS=500
+MARCO_SIZE=256
+ENTRADAS_CACHE=15
+CACHE_X_PROC=3
+RETARDO_MEMORIA=100
