--- a/kernel/config.cfg
+++ b/kernel/config.cfg
@@ -10,6 +10,7 @@ PUERTO_FS=8084
 SEM_IDS=[SEM1,SEM2,SEM3]
 SEM_INIT=[0,0,5]
 SHARED_VARS=[!Ga,!Ba,!Ca]
+STACK_SIZE=2
 QUANTUM_SLEEP=1
 QUANTUM=1
 RETARDO=1000000
