--- a/parser/Debug/makefile
+++ b/parser/Debug/makefile
@@ -25,8 +25,11 @@ endif
 # All Target
 all: libparser.so
 
+dependents:
+	-cd /home/utnso/workspace/tp-2017-1c-Blue-4/commons/Debug && $(MAKE) all
+
 # Tool invocations
-libparser.so: $(OBJS) $(USER_OBJS)
+libparser.so: $(OBJS) $(USER_OBJS) /home/utnso/workspace/tp-2017-1c-Blue-4/commons/Debug/libcommons.so
 	@echo 'Building target: $@'
 	@echo 'Invoking: GCC C Linker'
 	gcc -L"/home/utnso/workspace/tp-2017-1c-Blue-4/commons/Debug" -shared -o "libparser.so" $(OBJS) $(USER_OBJS) $(LIBS)
@@ -40,5 +43,6 @@ clean:
 
 .PHONY: all clean dependents
 .SECONDARY:
+/home/utnso/workspace/tp-2017-1c-Blue-4/commons/Debug/libcommons.so:
 
 -include ../makefile.targets
