--- a/kernel/config.cfg
+++ b/kernel/config.cfg
@@ -9,7 +9,7 @@ PUERTO_UMC=8085
 PUERTO_FS=8084
 SEM_IDS=[SEM1,SEM2,SEM3]
 SEM_INIT=[0,0,5]
-SHARED_VARS=[!Ga,!Ba,!Ca]
+SHARED_VARS=[Ga,Ba,Ca]
 STACK_SIZE=2
 QUANTUM_SLEEP=1
 QUANTUM=1
