--- a/blue4-lib/Debug/makefile
+++ b/blue4-lib/Debug/makefile
@@ -24,14 +24,11 @@ endif
 # All Target
 all: libblue4-lib.so
 
-dependents:
-	-cd /home/utnso/workspace/tp-2017-1c-Blue-4/commons/Debug && $(MAKE) all
-
 # Tool invocations
-libblue4-lib.so: $(OBJS) $(USER_OBJS) /home/utnso/workspace/tp-2017-1c-Blue-4/commons/Debug/libcommons.so
+libblue4-lib.so: $(OBJS) $(USER_OBJS)
 	@echo 'Building target: $@'
 	@echo 'Invoking: GCC C Linker'
-	gcc -L"/home/utnso/workspace/tp-2017-1c-Blue-4/commons/Debug" -shared -o "libblue4-lib.so" $(OBJS) $(USER_OBJS) $(LIBS)
+	gcc -shared -o "libblue4-lib.so" $(OBJS) $(USER_OBJS) $(LIBS)
 	@echo 'Finished building target: $@'
 	@echo ' '
 
@@ -42,6 +39,5 @@ clean:
 
 .PHONY: all clean dependents
 .SECONDARY:
-/home/utnso/workspace/tp-2017-1c-Blue-4/commons/Debug/libcommons.so:
 
 -include ../makefile.targets
