--- a/kernel/.cproject
+++ b/kernel/.cproject
@@ -39,7 +39,7 @@
 								<option id="gnu.c.link.option.libs.1989143014" name="Libraries (-l)" superClass="gnu.c.link.option.libs" valueType="libs">
 									<listOptionValue builtIn="false" value="blue4-lib"/>
 									<listOptionValue builtIn="false" value="commons"/>
-									<listOptionValue builtIn="false" value="ansisop-parser"/>
+									<listOptionValue builtIn="false" value="parser-ansisop"/>
 									<listOptionValue builtIn="false" value="pthread"/>
 								</option>
 								<inputType id="cdt.managedbuild.tool.gnu.c.linker.input.1594851081" superClass="cdt.managedbuild.tool.gnu.c.linker.input">
