--- a/kernel/.project
+++ b/kernel/.project
@@ -4,6 +4,8 @@
 	<comment></comment>
 	<projects>
 		<project>blue4-lib</project>
+		<project>commons</project>
+		<project>parser</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
