--- a/kernel/config.cfg
+++ b/kernel/config.cfg
@@ -1,4 +1,4 @@
-ALGORITMO=FIFO
+ALGORITMO=RR
 GRADO_MULTIPROG=1
 IP=127.0.0.1
 IP_UMC=127.0.0.1
@@ -13,4 +13,4 @@ SHARED_VARS=[Ga,Ba,Ca]
 STACK_SIZE=2
 QUANTUM_SLEEP=1
 QUANTUM=1
-RETARDO=1000000
+RETARDO=100000000
