--- a/blue4-lib/.project
+++ b/blue4-lib/.project
@@ -3,6 +3,7 @@
 	<name>blue4-lib</name>
 	<comment></comment>
 	<projects>
+		<project>commons</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
