Se puede cambiar quantum, retardo y algoritmo en tiempo de ejecucion

--- a/kernel/config.cfg
+++ b/kernel/config.cfg
@@ -1,4 +1,4 @@
-ALGORITMO=FIFO
+ALGORITMO=RR
 GRADO_MULTIPROG=1
 IP=127.0.0.1
 IP_UMC=127.0.0.1
@@ -11,6 +11,5 @@ SEM_IDS=[SEM1,SEM2,SEM3]
 SEM_INIT=[0,0,5]
 SHARED_VARS=[!Ga,!Ba,!Ca]
 STACK_SIZE=2
-QUANTUM_SLEEP=1
-QUANTUM=1
-RETARDO=100000000
+QUANTUM_SLEEP=1000
+QUANTUM=2
