--- a/kernel/config.cfg
+++ b/kernel/config.cfg
@@ -1,5 +1,5 @@
 ALGORITMO=FIFO
-GRADO_MULTIPROG=1
+GRADO_MULTIPROG=5
 IP=127.0.0.1
 IP_UMC=127.0.0.1
 IP_FS=127.0.0.1
@@ -7,9 +7,9 @@ PUERTO_PROG=8080
 PUERTO_CPU=8081
 PUERTO_UMC=8085
 PUERTO_FS=8084
-SEM_IDS=[SEM1,SEM2,SEM3]
-SEM_INIT=[0,0,5]
-SHARED_VARS=[!Ga,!Ba,!Ca]
+SEM_IDS=[mutexArch,b]
+SEM_INIT=[0,5]
+SHARED_VARS=[!pasadas]
 STACK_SIZE=2
 QUANTUM_SLEEP=1000
 QUANTUM=2
