Arreglo al heap, ahora verifica correctamente si se pudo asignar una nueva pagina al proceso

--- a/kernel/config.cfg
+++ b/kernel/config.cfg
@@ -7,9 +7,9 @@ PUERTO_PROG=8080
 PUERTO_CPU=8081
 PUERTO_UMC=8085
 PUERTO_FS=8084
-SEM_IDS=[mutexArch,b]
-SEM_INIT=[0,5]
-SHARED_VARS=[!pasadas]
+SEM_IDS=[m,b,c]
+SEM_INIT=[1,1,0]
+SHARED_VARS=[!pasadas,!colas]
 STACK_SIZE=2
-QUANTUM_SLEEP=1000
-QUANTUM=2
+QUANTUM_SLEEP=500
+QUANTUM=4
