Productor/Consumidor funciona con 3 CPUs

--- a/kernel/config.cfg
+++ b/kernel/config.cfg
@@ -7,8 +7,8 @@ PUERTO_PROG=8080
 PUERTO_CPU=8081
 PUERTO_UMC=8085
 PUERTO_FS=8084
-SEM_IDS=[mutexArch,b]
-SEM_INIT=[0,5]
+SEM_IDS=[m,b,c]
+SEM_INIT=[1,1,0]
 SHARED_VARS=[!pasadas,!colas]
 STACK_SIZE=2
 QUANTUM_SLEEP=10000
