FIFO funcionando como deberia

--- a/kernel/config.cfg
+++ b/kernel/config.cfg
@@ -1,4 +1,4 @@
-ALGORITMO=RR
+ALGORITMO=FIFO
 GRADO_MULTIPROG=5
 IP=127.0.0.1
 IP_UMC=127.0.0.1
@@ -11,5 +11,5 @@ SEM_IDS=[m,b,c]
 SEM_INIT=[1,1,0]
 SHARED_VARS=[!pasadas,!colas]
 STACK_SIZE=2
-QUANTUM_SLEEP=5000000
+QUANTUM_SLEEP=1000000
 QUANTUM=4
