--- a/kernel/config.cfg
+++ b/kernel/config.cfg
@@ -11,5 +11,6 @@ SEM_IDS=[m,b,c]
 SEM_INIT=[1,1,0]
 SHARED_VARS=[!pasadas,!colas]
 STACK_SIZE=2
-QUANTUM_SLEEP=500
+QUANTUM_SLEEP=200000
 QUANTUM=4
+originales/llenandomemoria.ansisop
